--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,7 +21,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"/>
+    <include
+        android:id="@+id/include_content_main"
+        layout="@layout/content_main"
+        />
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
