--- a/app/src/main/res/layout/fragment_settings_page.xml
+++ b/app/src/main/res/layout/fragment_settings_page.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_fragment_setting_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
