--- a/app/src/main/res/layout/fragment_setting_page_recycler_view_item.xml
+++ b/app/src/main/res/layout/fragment_setting_page_recycler_view_item.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_gravity="center">
+        android:id="@+id/fragment_settings_page_recycler_view_item_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:gravity="left">
+
+        <ImageView
+            android:id="@+id/fragment_settings_page_recycler_view_item_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bmob_update_btn_check_off_focused_holo_light"
+            android:layout_centerVertical="true"/>
+
         <TextView
             android:id="@+id/fragment_settings_page_recycler_view_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="53dp"
             android:textAlignment="center"
-            android:textSize="15sp"
-            />
+            android:textSize="15sp"/>
 </RelativeLayout>
