--- a/commondialog/src/main/res/values/styles.xml
+++ b/commondialog/src/main/res/values/styles.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MyDialog" parent="android:Theme.Dialog">
-        <!-- 背景颜色及透明程度 -->
+    <style name="dialog_activity_style">
+        <!--设置dialog的背景-->
         <item name="android:windowBackground">@android:color/transparent</item>
-        <!-- 是否半透明 -->
-        <item name="android:windowIsTranslucent">false</item>
-        <!-- 是否没有标题 -->
+        <!--设置Dialog的windowFrame框为无-->
+        <item name="android:windowFrame">@null</item>
+        <!--设置无标题-->
         <item name="android:windowNoTitle">true</item>
-        <!-- 是否浮现在activity之上 -->
+        <!--是否浮现在activity之上-->
         <item name="android:windowIsFloating">true</item>
-        <!-- 是否背景模糊 -->
-        <item name="android:backgroundDimEnabled">false</item>
-        <!-- 设置背景模糊的透明度-->
-        <item name="android:backgroundDimAmount">0.5</item>
+        <!--是否半透明-->
+        <item name="android:windowIsTranslucent">true</item>
+        <!--设置窗口内容不覆盖-->
+        <item name="android:windowContentOverlay">@null</item>
+        <!--设置动画，在这里使用让它继承系统的Animation.Dialog-->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <!--背景是否模糊显示-->
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 </resources>
