add dimen values

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,213 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="app_font_size_10">10sp</dimen>
+    <dimen name="app_font_size_11">11sp</dimen>
+    <dimen name="app_font_size_12">12sp</dimen>
+    <dimen name="app_font_size_13">13sp</dimen>
+    <dimen name="app_font_size_14">14sp</dimen>
+    <dimen name="app_font_size_15">15sp</dimen>
+    <dimen name="app_font_size_16">16sp</dimen>
+    <dimen name="app_font_size_17">17sp</dimen>
+    <dimen name="app_font_size_18">18sp</dimen>
+    <dimen name="app_font_size_19">19sp</dimen>
+    <dimen name="app_font_size_20">20sp</dimen>
+    <dimen name="app_font_size_21">21sp</dimen>
+    <dimen name="app_font_size_22">22sp</dimen>
+    <dimen name="app_font_size_23">23sp</dimen>
+    <dimen name="app_font_size_24">24sp</dimen>
+    <dimen name="app_font_size_25">25sp</dimen>
+    <dimen name="app_font_size_26">26sp</dimen>
+    <dimen name="app_font_size_27">27sp</dimen>
+    <dimen name="app_font_size_28">28sp</dimen>
+    <dimen name="app_font_size_29">28sp</dimen>
+    <dimen name="app_font_size_30">30sp</dimen>
+    <dimen name="app_font_size_31">31sp</dimen>
+    <dimen name="app_font_size_32">32sp</dimen>
+    <dimen name="app_font_size_33">33sp</dimen>
+    <dimen name="app_font_size_34">34sp</dimen>
+    <dimen name="app_font_size_35">35sp</dimen>
+    <dimen name="app_font_size_36">36sp</dimen>
+    <dimen name="app_font_size_37">37sp</dimen>
+    <dimen name="app_font_size_38">38sp</dimen>
+    <dimen name="app_font_size_39">39sp</dimen>
+    <dimen name="app_font_size_40">40sp</dimen>
+    <dimen name="app_font_size_41">41sp</dimen>
+    <dimen name="app_font_size_42">42sp</dimen>
+    <dimen name="app_font_size_43">43sp</dimen>
+    <dimen name="app_font_size_44">44sp</dimen>
+    <dimen name="app_font_size_45">45sp</dimen>
+    <dimen name="app_font_size_46">46sp</dimen>
+    <dimen name="app_font_size_47">47sp</dimen>
+    <dimen name="app_font_size_48">48sp</dimen>
+    <dimen name="app_font_size_50">50sp</dimen>
+    <dimen name="app_font_size_60">60sp</dimen>
+    <dimen name="app_font_size_68">68sp</dimen>
+
+
+    <dimen name="app_N_16dp">-16dp</dimen>
+    <dimen name="app_0dp">0dp</dimen>
+    <dimen name="app_1dp">1dp</dimen>
+    <dimen name="app_2dp">2dp</dimen>
+    <dimen name="app_3dp">3dp</dimen>
+    <dimen name="app_4dp">4dp</dimen>
+    <dimen name="app_5dp">5dp</dimen>
+    <dimen name="app_6dp">6dp</dimen>
+    <dimen name="app_7dp">7dp</dimen>
+    <dimen name="app_8dp">8dp</dimen>
+    <dimen name="app_9dp">9dp</dimen>
+    <dimen name="app_10dp">10dp</dimen>
+    <dimen name="app_11dp">11dp</dimen>
+    <dimen name="app_12dp">12dp</dimen>
+    <dimen name="app_13dp">13dp</dimen>
+    <dimen name="app_14dp">14dp</dimen>
+    <dimen name="app_15dp">15dp</dimen>
+    <dimen name="app_16dp">16dp</dimen>
+    <dimen name="app_17dp">17dp</dimen>
+    <dimen name="app_18dp">18dp</dimen>
+    <dimen name="app_19dp">19dp</dimen>
+    <dimen name="app_20dp">20dp</dimen>
+    <dimen name="app_21dp">21dp</dimen>
+    <dimen name="app_22dp">22dp</dimen>
+    <dimen name="app_23dp">23dp</dimen>
+    <dimen name="app_24dp">24dp</dimen>
+    <dimen name="app_25dp">25dp</dimen>
+    <dimen name="app_26dp">26dp</dimen>
+    <dimen name="app_27dp">27dp</dimen>
+    <dimen name="app_28dp">28dp</dimen>
+    <dimen name="app_29dp">29dp</dimen>
+    <dimen name="app_30dp">30dp</dimen>
+    <dimen name="app_31dp">31dp</dimen>
+    <dimen name="app_32dp">32dp</dimen>
+    <dimen name="app_33dp">33dp</dimen>
+    <dimen name="app_34dp">34dp</dimen>
+    <dimen name="app_35dp">35dp</dimen>
+    <dimen name="app_36dp">36dp</dimen>
+    <dimen name="app_38dp">38dp</dimen>
+    <dimen name="app_39dp">39dp</dimen>
+    <dimen name="app_40dp">40dp</dimen>
+    <dimen name="app_41dp">41dp</dimen>
+    <dimen name="app_42dp">42dp</dimen>
+    <dimen name="app_43dp">43dp</dimen>
+    <dimen name="app_44dp">44dp</dimen>
+    <dimen name="app_45dp">45dp</dimen>
+    <dimen name="app_46dp">46dp</dimen>
+    <dimen name="app_47dp">47dp</dimen>
+    <dimen name="app_48dp">48dp</dimen>
+    <dimen name="app_49dp">49dp</dimen>
+    <dimen name="app_50dp">50dp</dimen>
+    <dimen name="app_51dp">51dp</dimen>
+    <dimen name="app_52dp">52dp</dimen>
+    <dimen name="app_53dp">53dp</dimen>
+    <dimen name="app_54dp">54dp</dimen>
+    <dimen name="app_55dp">55dp</dimen>
+    <dimen name="app_56dp">56dp</dimen>
+    <dimen name="app_57dp">57dp</dimen>
+    <dimen name="app_58dp">58dp</dimen>
+    <dimen name="app_59dp">59dp</dimen>
+    <dimen name="app_60dp">60dp</dimen>
+    <dimen name="app_61dp">61dp</dimen>
+    <dimen name="app_62dp">62dp</dimen>
+    <dimen name="app_63dp">63dp</dimen>
+    <dimen name="app_64dp">64dp</dimen>
+    <dimen name="app_65dp">65dp</dimen>
+    <dimen name="app_66dp">66dp</dimen>
+    <dimen name="app_67dp">67dp</dimen>
+    <dimen name="app_69dp">69dp</dimen>
+    <dimen name="app_70dp">70dp</dimen>
+    <dimen name="app_71dp">71dp</dimen>
+    <dimen name="app_72dp">72dp</dimen>
+    <dimen name="app_73dp">73dp</dimen>
+    <dimen name="app_74dp">74dp</dimen>
+    <dimen name="app_75dp">75dp</dimen>
+    <dimen name="app_77dp">77dp</dimen>
+    <dimen name="app_78dp">78dp</dimen>
+    <dimen name="app_80dp">80dp</dimen>
+    <dimen name="app_82dp">82dp</dimen>
+    <dimen name="app_83dp">83dp</dimen>
+    <dimen name="app_84dp">84dp</dimen>
+    <dimen name="app_85dp">85dp</dimen>
+    <dimen name="app_86dp">86dp</dimen>
+    <dimen name="app_87dp">87dp</dimen>
+    <dimen name="app_88dp">88dp</dimen>
+    <dimen name="app_90dp">90dp</dimen>
+    <dimen name="app_95dp">95dp</dimen>
+    <dimen name="app_98dp">98dp</dimen>
+    <dimen name="app_99dp">99dp</dimen>
+    <dimen name="app_100dp">100dp</dimen>
+    <dimen name="app_101dp">101dp</dimen>
+    <dimen name="app_103dp">103dp</dimen>
+    <dimen name="app_104dp">104dp</dimen>
+    <dimen name="app_105dp">105dp</dimen>
+    <dimen name="app_106dp">106dp</dimen>
+    <dimen name="app_110dp">110dp</dimen>
+    <dimen name="app_114dp">114dp</dimen>
+    <dimen name="app_115dp">115dp</dimen>
+    <dimen name="app_117dp">117dp</dimen>
+    <dimen name="app_120dp">120dp</dimen>
+    <dimen name="app_121dp">121dp</dimen>
+    <dimen name="app_124dp">124dp</dimen>
+    <dimen name="app_125dp">125dp</dimen>
+    <dimen name="app_128dp">128dp</dimen>
+    <dimen name="app_130dp">130dp</dimen>
+    <dimen name="app_131dp">131dp</dimen>
+    <dimen name="app_132dp">132dp</dimen>
+    <dimen name="app_133dp">133dp</dimen>
+    <dimen name="app_134dp">134dp</dimen>
+    <dimen name="app_135dp">135dp</dimen>
+    <dimen name="app_136dp">136dp</dimen>
+    <dimen name="app_138dp">138dp</dimen>
+    <dimen name="app_140dp">140dp</dimen>
+    <dimen name="app_141dp">141dp</dimen>
+    <dimen name="app_143dp">143dp</dimen>
+    <dimen name="app_145dp">145dp</dimen>
+    <dimen name="app_150dp">150dp</dimen>
+    <dimen name="app_151dp">151dp</dimen>
+    <dimen name="app_155dp">155dp</dimen>
+    <dimen name="app_158dp">158dp</dimen>
+    <dimen name="app_160dp">160dp</dimen>
+    <dimen name="app_163dp">163dp</dimen>
+    <dimen name="app_165dp">165dp</dimen>
+    <dimen name="app_167dp">167dp</dimen>
+    <dimen name="app_180dp">180dp</dimen>
+    <dimen name="app_182dp">182dp</dimen>
+    <dimen name="app_188dp">188dp</dimen>
+    <dimen name="app_189dp">189dp</dimen>
+    <dimen name="app_194dp">194dp</dimen>
+    <dimen name="app_200dp">200dp</dimen>
+    <dimen name="app_208dp">208dp</dimen>
+    <dimen name="app_210dp">210dp</dimen>
+    <dimen name="app_214dp">214dp</dimen>
+    <dimen name="app_215dp">215dp</dimen>
+    <dimen name="app_218dp">218dp</dimen>
+    <dimen name="app_220dp">220dp</dimen>
+    <dimen name="app_230dp">230dp</dimen>
+    <dimen name="app_234dp">234dp</dimen>
+    <dimen name="app_240dp">240dp</dimen>
+    <dimen name="app_245dp">245dp</dimen>
+    <dimen name="app_250dp">250dp</dimen>
+    <dimen name="app_254dp">254dp</dimen>
+    <dimen name="app_270dp">270dp</dimen>
+    <dimen name="app_275dp">275dp</dimen>
+    <dimen name="app_283dp">283dp</dimen>
+    <dimen name="app_300dp">300dp</dimen>
+    <dimen name="app_302dp">302dp</dimen>
+    <dimen name="app_315dp">315dp</dimen>
+    <dimen name="app_320dp">320dp</dimen>
+    <dimen name="app_332dp">332dp</dimen>
+    <dimen name="app_333dp">333dp</dimen>
+    <dimen name="app_334dp">334dp</dimen>
+    <dimen name="app_335dp">335dp</dimen>
+    <dimen name="app_355dp">355dp</dimen>
+    <dimen name="app_360dp">360dp</dimen>
+    <dimen name="app_380dp">380dp</dimen>
+    <dimen name="app_400dp">400dp</dimen>
+    <dimen name="app_448dp">448dp</dimen>
+    <dimen name="app_600dp">600dp</dimen>
+
+
+    <dimen name="sq_detail_anchor">286dp</dimen>
+    <dimen name="sq_detail_margin_top">20dp</dimen>
+
 </resources>
