--- a/dialogs/src/main/res/layout/dialog_alert.xml
+++ b/dialogs/src/main/res/layout/dialog_alert.xml
@@ -10,7 +10,7 @@
         android:layout_width="@dimen/app_335dp"
         android:layout_height="@dimen/app_165dp">
 
-        <com.youdao.lib.widget.RoundAngleImageView
+        <com.youdao.lib.dialogs.util.RoundAngleImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
