add banner in hot point page

--- a/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
@@ -14,14 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/button"
+        <com.youth.banner.Banner
+            android:id="@+id/banner_tab_hot_point"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="放置Banner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +36,7 @@
             android:textColor="#000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"/>
+            app:layout_constraintTop_toBottomOf="@+id/banner_tab_hot_point"/>
 
         <Button
             android:id="@+id/button2"
