--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,28 +5,27 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:id="@+id/home_page_title"
+
+
+    <com.youth.banner.Banner
+        android:id="@+id/home_page_banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="#000000">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="主页"
-            android:textColor="#ffffff"
-            android:textSize="25sp"/>
-
-    </RelativeLayout>
+        android:layout_height="@dimen/app_200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <android.support.design.widget.TabLayout
         android:id="@+id/home_page_tab_layout"
+        android:layout_below="@id/home_page_banner"
+        android:layout_marginTop="@dimen/app_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/home_page_title"
         app:tabTextColor="@color/colorPrimary"
     />
 
