add drawable dir for different dpi , change UI in hot point tab

--- a/app/src/main/res/layout/tab_layout_collection_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_collection_fragment.xml
@@ -1,18 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_centerInParent="true"
-            android:text="放置Banner"/>
-
-
-
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="待实现"/>
+</RelativeLayout>
