视频测试完成，代码结构待优化

--- a/app/src/main/res/layout/activity_debug.xml
+++ b/app/src/main/res/layout/activity_debug.xml
@@ -8,21 +8,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="测试"
-        android:visibility="gone"
+        android:text="弹窗测试"
         android:id="@+id/btn_debug_dialog"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
-
-        <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
-            android:id="@+id/video_dubug_activity"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/app_200dp" />
-
-    </RelativeLayout>
 
     <Button
         android:layout_width="wrap_content"
