--- a/dialogs/src/main/res/layout/dialog_export_2.xml
+++ b/dialogs/src/main/res/layout/dialog_export_2.xml
@@ -10,7 +10,7 @@
         android:background="@color/color_FFFFFF">
 
         <TextView
-            android:id="@+id/tv_output_dialog_title"
+            android:id="@+id/tv_havent_login_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/app_200dp"
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/tv_output_dialog_file_type"
-            android:layout_below="@id/tv_output_dialog_title"
+            android:layout_below="@id/tv_havent_login_tip"
             android:layout_width="@dimen/app_32dp"
             android:layout_height="@dimen/app_18dp"
             android:layout_marginTop="@dimen/app_30dp"
