1.在Dialog库中添加了登陆用的Dialog，随后弃用  2.添加了LoginActivity用于用户登陆（不采用计划中的Dialog的形式） 3.打通了主页抽屉中的登陆逻辑，随后再进行丰富以及UI优化  4.添加了Constant类，用来统一管理各种tag

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,7 +21,7 @@
         app:radius="@dimen/app_20dp" />
 
     <TextView
-        android:id="@+id/iv_drawer_user_name"
+        android:id="@+id/tv_drawer_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
