--- a/app/src/main/res/layout/fragment_settings_page.xml
+++ b/app/src/main/res/layout/fragment_settings_page.xml
@@ -6,11 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <Button
-        android:id="@+id/area_login_fragment_settings"
+    <RelativeLayout
+        android:id="@+id/rl_login_fragment_user_area"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_150dp"
-        android:text="登陆相关"/>
+        android:layout_height="wrap_content">
+
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/lv_fragment_setting"
@@ -18,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/app_20dp"
         android:divider="@null"
-        android:layout_below="@id/area_login_fragment_settings">
+        android:layout_below="@id/rl_login_fragment_user_area">
     </ListView>
 
 
