--- a/dialogs/src/main/res/layout/ask_for_login.xml
+++ b/dialogs/src/main/res/layout/ask_for_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <!--根据UI要求，题目导出弹窗的这个风格已经弃用-->
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -93,13 +93,13 @@
             android:layout_below="@id/btn_login"
             android:layout_marginLeft="@dimen/app_30dp"
             android:layout_marginTop="@dimen/app_25dp"
-            android:layout_toLeftOf="@id/btn_sign_up"
+            android:layout_toLeftOf="@id/btn_head_to_sign_up"
             android:layout_marginRight="@dimen/app_5dp"
             android:text="尚未注册？"
             android:textSize="@dimen/app_font_size_16" />
 
         <Button
-            android:id="@+id/btn_sign_up"
+            android:id="@+id/btn_head_to_sign_up"
             android:layout_width="@dimen/app_100dp"
             android:layout_height="@dimen/app_35dp"
             android:layout_below="@id/btn_login"
@@ -107,14 +107,24 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/app_30dp"
             android:background="@drawable/ic_blue_trans_8_radius_24"
-            android:onClick="onClick4SignUp"
+            android:onClick="onClick4EnterSignUpPage"
             android:text="立即注册"
             android:textColor="@color/color_4371FF"
             android:textSize="@dimen/app_font_size_16" />
 
+        <EditText
+            android:id="@+id/et_user_password_confirm"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="@dimen/app_40dp"
+            android:layout_marginLeft="@dimen/app_100dp"
+            android:layout_marginRight="@dimen/app_40dp"
+            android:layout_below="@id/et_user_password"/>
+
         <TextView
             android:id="@+id/output_dialog_decor_line"
-            android:layout_below="@id/btn_sign_up"
+            android:layout_below="@id/btn_head_to_sign_up"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_1dp"
             android:layout_marginTop="@dimen/app_20dp"
