--- a/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!--板块1：近期热点-->
         <RelativeLayout
             android:id="@+id/area_tab_hot_point_hot_point"
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -48,19 +49,79 @@
                 android:background="@drawable/ic_shortcut_arrow_forward"
                 />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/app_150dp"
-                android:layout_marginTop="@dimen/app_30dp"
-                android:text="表格或者其他布局"/>
         </RelativeLayout>
 
+        <LinearLayout
+            android:layout_marginTop="@dimen/app_10dp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_155dp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/movie1"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"
+                />
+
+            <ImageView
+                android:id="@+id/movie2"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"/>
+            <ImageView
+                android:id="@+id/movie3"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_30dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影4"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影5"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影6"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <!--板块2：最近更新-->
         <RelativeLayout
-        android:id="@+id/area_tab_hot_point_recommand"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:id="@+id/area_tab_hot_point_recommand"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/app_18dp">
 
         <ImageView
             android:layout_width="@dimen/app_25dp"
@@ -94,19 +155,80 @@
             android:background="@drawable/ic_shortcut_arrow_forward"
             />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/app_150dp"
-            android:layout_marginTop="@dimen/app_30dp"
-            android:text="表格或者其他布局"/>
+
     </RelativeLayout>
 
+        <LinearLayout
+            android:layout_marginTop="@dimen/app_10dp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_155dp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/movie4"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"/>
+
+            <ImageView
+                android:id="@+id/movie5"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"/>
+
+            <ImageView
+                android:id="@+id/movie6"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_167dp"
+                android:background="@color/blue_4ea0e5"
+                android:scaleType="fitXY"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_30dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影1"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影2"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="电影3"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <!--猜你喜欢-->
         <RelativeLayout
             android:id="@+id/area_tab_hot_point_guess"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/app_20dp">
 
             <ImageView
                 android:layout_width="@dimen/app_25dp"
@@ -139,12 +261,6 @@
                 android:layout_alignParentRight="true"
                 android:background="@drawable/ic_shortcut_arrow_forward"
                 />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/app_150dp"
-                android:layout_marginTop="@dimen/app_30dp"
-                android:text="表格或者其他布局"/>
         </RelativeLayout>
 
     </LinearLayout>
