--- a/app/src/main/res/layout/fragment_discover_page.xml
+++ b/app/src/main/res/layout/fragment_discover_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,4 +10,13 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="发现页"/>
-</android.support.constraint.ConstraintLayout>
+
+    <com.youdao.lib.dialogs.util.RoundAngleImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/app_150dp"
+        android:layout_marginTop="@dimen/app_180dp"
+        android:src="@color/blue_E0F0FF"
+        android:layout_marginLeft="@dimen/app_20dp"
+        android:layout_marginRight="@dimen/app_20dp"
+        app:radius="@dimen/app_20dp"/>
+</RelativeLayout>
