fix:修复了抽屉栏中用户状态(UI)和设置页中用户状态(UI)不同步的问题

--- a/app/src/main/res/layout/fragment_settings_page.xml
+++ b/app/src/main/res/layout/fragment_settings_page.xml
@@ -23,15 +23,26 @@
             />
 
         <TextView
+            android:id="@+id/tv_setting_page_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/circle_iv_user_pic"
-            android:text="您尚未进行登陆"
-            android:textSize="@dimen/app_font_size_19"
+            android:text="@string/not_login_tip_1"
+            android:textSize="@dimen/app_font_size_22"
             android:layout_marginTop="@dimen/app_50dp"
             android:layout_marginLeft="@dimen/app_20dp"
             android:layout_centerVertical="true"
             />
+
+        <TextView
+            android:id="@+id/tv_setting_page_user_signature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_login_tip_2"
+            android:layout_toRightOf="@id/circle_iv_user_pic"
+            android:layout_marginLeft="@dimen/app_20dp"
+            android:layout_marginTop="@dimen/app_90dp"
+            android:textSize="@dimen/app_font_size_13"/>
 
         <TextView
             android:layout_width="match_parent"
