--- a/app/src/main/res/layout/activity_debug.xml
+++ b/app/src/main/res/layout/activity_debug.xml
@@ -33,4 +33,14 @@
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="onEnterMovieList"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="232dp"
+        android:onClick="onMovieListUpdate"
+        android:text="Bmob电影表更新"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
