--- a/app/src/main/res/layout/fragment_settings_page.xml
+++ b/app/src/main/res/layout/fragment_settings_page.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:id="@+id/rl_login_fragment_user_area"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_150dp">
+        android:layout_height="@dimen/app_150dp"
+        android:background="@color/blue_E0F0FF">
 
         <com.zhuodp.graduationproject.utils.view.CircleImageView
             android:id="@+id/circle_iv_user_pic"
@@ -18,8 +19,8 @@
             android:layout_marginLeft="@dimen/app_20dp"
             android:layout_marginTop="@dimen/app_20dp"
             android:layout_centerVertical="true"
-            android:src="@color/blue_E0F0FF"
-            android:scaleType="fitXY"
+            android:src="@drawable/user_pic_test"
+            android:scaleType="centerCrop"
             />
 
         <TextView
