--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/B2_20_trans"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:background="@color/B2_20_trans">
 
-    <com.youdao.lib.dialogs.util.RoundAngleImageView
+    <com.zhuodp.graduationproject.utils.view.CircleImageView
         android:id="@+id/iv_drawer_user_pic"
         android:layout_width="@dimen/app_80dp"
         android:layout_height="@dimen/app_80dp"
-        android:src="@drawable/black_background"
+        android:src="@drawable/user_pic_test"
         android:onClick="onUserPicClick"
-        app:radius="@dimen/app_20dp" />
+        android:layout_centerVertical="true"
+        android:scaleType="centerCrop"
+        android:layout_marginLeft="@dimen/app_30dp"/>
 
     <TextView
         android:id="@+id/tv_drawer_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="@dimen/app_5dp"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="@dimen/app_30dp"
+        android:layout_below="@id/iv_drawer_user_pic"
         android:text="点击头像登陆"
+        android:textSize="@dimen/app_font_size_16"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/textView"
+        android:layout_below="@id/tv_drawer_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/app_30dp"
+        android:textSize="@dimen/app_font_size_13"
+        android:gravity="center_vertical"
         android:text="个性签名未设置"/>
 
-</LinearLayout>
+</RelativeLayout>
